--- a/Templates/Sections/NextStepSeries/MD102.1.md
+++ b/Templates/Sections/NextStepSeries/MD102.1.md
@@ -3,4 +3,4 @@
 - Create and Deploy Images with MDT [Guided]
 - Configure User State Migration [Guided]
 - Configure Remote Help in Intune [Guided]
-- Obtain Microsoft 365 Credentials [Prerequisite Lab]
+- Provision an Office 365 E5 Trial Subscription [Prerequisite Lab]
