--- a/Templates/Sections/NextStepSeries/MD102.4.md
+++ b/Templates/Sections/NextStepSeries/MD102.4.md
@@ -2,4 +2,4 @@
 - Manage Application Protection Policies [Guided]
 - Can You Plan and Implement Conditional Access Policies? [Advanced]
 - Manage App Configuration Policies [Guided]
-- Obtain Microsoft 365 Credentials [Prerequisite Lab]
+- Provision an Office 365 E5 Trial Subscription [Prerequisite Lab]
