--- a/Templates/Sections/NextStepSeries/MD102.2.md
+++ b/Templates/Sections/NextStepSeries/MD102.2.md
@@ -1,4 +1,4 @@
 - Implement User Authentication on Windows Devices and Manage Group Membership [Guided]
 - Implement Compliance Policies [Guided]
 - Manage Notifications for Compliance Policies [Guided]
-- Provision an Office 365 E5 Trial Subscription [Prerequisite Lab]
+- Provision a Microsoft 365 Trial Account [Prerequisite Lab]
