--- a/Templates/Sections/NextStepSeries/MD102.3.md
+++ b/Templates/Sections/NextStepSeries/MD102.3.md
@@ -2,4 +2,4 @@
 - Implement Configuration Profiles [Guided]
 - Manage Android Devices by Using Profiles [Guided]
 - Implement Security Baselines in Intune [Guided]
-- Provision an Office 365 E5 Trial Subscription [Prerequisite Lab]
+- Provision a Microsoft 365 Trial Account [Prerequisite Lab]
