--- a/Templates/Sections/NextStepSeries/MS101.md
+++ b/Templates/Sections/NextStepSeries/MS101.md
@@ -16,4 +16,4 @@
 - Manage Search and Investigation [Guided]
 - Manage Microsoft 365 Governance and Compliance [Advanced]
 - Microsoft 365 Mobility and Security [Expert]
-- Microsoft 365 Mobility and Security [Prerequisite Lab]
+- Provision a Microsoft 365 Trial Account [Prerequisite Lab]
