--- a/Templates/Sections/NextStepSeries/MS102.1.md
+++ b/Templates/Sections/NextStepSeries/MS102.1.md
@@ -6,4 +6,4 @@
 - Enable Privileged Identity Management (PIM) for Select Roles in Microsoft Entra ID [Guided]
 - Can You Use Conditional Methods to Control User Access? [Advanced]
 - Can You Use Privileged Identity Management (PIM) to Enable Just in Time Role Requests? [Expert]
-- Sign up for a Microsoft 365 Trial Account [Prerequisite Lab]
+- Provision a Microsoft 365 Trial Account [Prerequisite Lab]
