--- a/Templates/Sections/NextStepSeries/AI102.md
+++ b/Templates/Sections/NextStepSeries/AI102.md
@@ -5,6 +5,6 @@
 - Integrate Azure AI Immersive Reader Into Your Application by Using Its SDK [Guided]
 - Summarize Text Automatically by Using Azure AI Language Services [Guided]
 - Translate Text Between Languages by Using Azure AI Translator [Guided]
-- Generate Image Descriptions from Text (Image Captioning) [Guided]
+- Generate Image Descriptions from Text by Using Azure AI [Guided]
 - Build an AI-Powered Search System by Using Azure AI Search [Guided]
 - Analyze and Generate Text-Based Sentiment by Using Azure AI Services [Guided]
